# racebot

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml
.devcontainer/: Dockerfile  devcontainer.json
.devcontainer/scripts/: copy_auth.sh
.github/workflows/: publish-main.yml  publish-pr.yml  publish.yml
sound/: readme.txt
src/: countdown_bot.py  countdown_cog.py  load_env.py  log_handler.py  main.py  semaphore.py
