[project]
name = "workspace"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "discord-py[voice]>=2.6.4",
]

[tool.ruff]
line-length = 120
lint.select = ["ALL"]
lint.ignore = [
    "A002",
    "EM101",
    "EM102",
    "FIX002",
    "S101",
    "T201",
    "TRY003",
    "TRY300",
    "COM812",
    "RUF002",
    "D",
    "TD",
]
lint.fixable = ["ALL"]
